#76592 - Improvements Widget Statistics - translation update

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
@@ -16,9 +16,9 @@
                         <table class="table-condensed">
                             <tr sty>
                                 <td>@Translation.Get("Pågående")</td>
-                                <td>@Translation.Get("Oöppnad")</td>
+                                <td>@Translation.Get("Olästa")</td>
                                 <td>@Translation.Get("Vilande")</td>
-                                <td>@Translation.Get("Försenad")</td>
+                                <td>@Translation.Get("Försenade")</td>
                             </tr>
                             <tr>
                                 <td id="st_inProgress"><i class="gif-loader" style="">&nbsp;</i></td>
@@ -28,9 +28,9 @@
                             </tr>
                             <tr>
                                 <td>@Translation.Get("Nya idag")</td>
-                                <td>@Translation.Get("Försenad idag")</td>
-                                <td>@Translation.Get("Löst idag")</td>
-                                <td>@Translation.Get("Löst i tid idag")</td>
+                                <td>@Translation.Get("Försenade idag")</td>
+                                <td>@Translation.Get("Lösta idag")</td>
+                                <td>@Translation.Get("Lösta i tid idag")</td>
                             </tr>
                             <tr>
                                 <td id="st_newToday"><i class="gif-loader" style="">&nbsp;</i></td>
