#52742 - Change default value for widgets to show all - added show more link

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1438,7 +1438,7 @@ table th.thpointer {
 }
 
     .box-main .accordion {
-        margin-bottom: 20px;
+        margin-bottom: 0;
     }
 
     .box-main .accordion-group {
