--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
@@ -1,20 +1,25 @@
 ﻿@using DH.Helpdesk.Common.Extensions.DateTime
-@model IEnumerable<DH.Helpdesk.BusinessData.Models.OperationLog.Output.OperationLogOverview>
+@model DH.Helpdesk.Web.Models.Widgets.WidgetModel<DH.Helpdesk.BusinessData.Models.OperationLog.Output.OperationLogOverview>
 
-@if (Model != null && Model.Any())
+@if (Model != null && Model.Items.Any())
 {
     <div class="row-fluid">
         <div class="box-box span12">
             <div class="box-header portlet-header">
-                <div class="start-tile-img label green"><a href="@Url.Action("index", "operationlog", new {area = ""})"><img src="@Url.Content("~/Content/icons/operationlog.png")" alt="@Translation.Get("Driftlogg", Enums.TranslationSource.TextTranslation)" /></a></div><h4>@Translation.Get("Driftlogg", Enums.TranslationSource.TextTranslation)</h4>
+                <div class="start-tile-img label green">
+                    <a href="@Url.Action("index", "operationlog", new {area = ""})">
+                        <img src="@Url.Content("~/Content/icons/operationlog.png")" alt="@Translation.Get("Driftlogg")"/>
+                    </a>
+                </div>
+                <h4>@Translation.Get("Driftlogg")</h4>
             </div>
             <div class="box-body portlet-content">
-                @foreach (var operationLog in Model)
+                @foreach (var operationLog in Model.Items)
                 {
                     if (operationLog.Object.Status == 1)
                     {
-                        <div class="box-post">                        
-                            <div class="label green">                            
+                        <div class="box-post">
+                            <div class="label green">
                                 @operationLog.CustomerName | Skapad @operationLog.CreatedDate.ToFormattedDateTime() Uppdaterad @operationLog.ChangedDate.ToFormattedDateTime()
                             </div>
                             <div class="captionrow">@operationLog.Object.Name</div>
@@ -22,6 +27,10 @@
                         </div>
                     }
                 }            
+                @if (Model.ShowMore)
+                {
+                    <div class="box-post" style="text-align: center"><a href="@Url.Action("index", "operationlog", new {area = ""})">>></a></div>
+                }
             </div>
         </div>
     </div>
