--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
@@ -29,7 +29,9 @@
                 }            
                 @if (Model.ShowMore)
                 {
-                    <div class="box-post" style="text-align: center"><a href="@Url.Action("index", "operationlog", new {area = ""})">>></a></div>
+                    <div class="box-post" style="text-align: center">
+                        <a class="btn" href="@Url.Action("index", "operationlog", new {area = ""})">>></a>
+                    </div>
                 }
             </div>
         </div>
