--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
@@ -32,7 +32,7 @@
                 @if (Model.ShowMore)
                 {
                     <div class="box-post" style="text-align: center">
-                        <a href="@Url.Action("index", "Document", new {area = ""})">>></a>
+                        <a class="btn" href="@Url.Action("index", "Document", new {area = ""})">>></a>
                     </div>
                 }
             </div>
